--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,3 @@
-*.pyc
-*.pyo
-.DS*
-.pylint_rc
-/.idea
-/.project
-/.pydevproject
-/.settings
-Thumbs.db
-*~
-.cache
+.*
+!/.gitignore
+!/.travis.yml
